WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249355
REGRESSION (macOS 11): Form controls don't paint with an inactive appearance in non-key windows
https://bugs.webkit.org/show_bug.cgi?id=249355
Summary
REGRESSION (macOS 11): Form controls don't paint with an inactive appearance ...
Simon Fraser (smfr)
Reported
2022-12-14 16:57:29 PST
Form controls are supposed to paint with an inactive appearance in non-key windows, and repaint when window key state changes. This seems to be broken; progress bars are the only controls that update correctly.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-14 16:58:15 PST
<
rdar://problem/103379662
>
Aditya Keerthi
Comment 2
2022-12-14 17:10:01 PST
<progress> does this by using `kCUIPresentationStateKey` – all the other controls use AppKit rendering, rather than CoreUI directly. This would imply that there is no problem with issuing a repaint, but rather, that the state we're giving AppKit is incorrect (or being dropped somewhere).
Simon Fraser (smfr)
Comment 3
2022-12-14 17:43:16 PST
This comes in through `themeWindowHasKeyAppearance = !controlStates.states().contains(ControlStates::States::WindowInactive);`
Aditya Keerthi
Comment 4
2022-12-21 09:56:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7962
EWS
Comment 5
2022-12-23 09:06:53 PST
Committed
258294@main
(456497bb8c15): <
https://commits.webkit.org/258294@main
> Reviewed commits have been landed. Closing PR #7962 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug