Source/WebCore/platform/graphics/mac/controls/WebControlView.mm
@@ -130,6 +130,11 @@ static NSRect _clipBounds;
     return self;
 }
 
+- (NSWindow *)_viewRoot
+{
+    return _window.get();
+}
+
 - (void)addSubview:(NSView *)subview
 {
     // By doing nothing in this method we forbid controls from adding subviews.
